# c2pa-fonts

./: Cargo.toml  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: binding.rs  error.rs  lib.rs  python.rs  reader.rs  sfnt.rs  table.rs  validate.rs  verify.rs  wasm.rs  writer.rs
tests/: roundtrip.rs
